# HelloNnapi

./: .editorconfig  README.md  build.gradle  flake.nix  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/hellonnapi/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  compile_commands.json  hellonnapi.cpp
app/src/main/cpp/.cache/clangd/index/: hellonnapi.cpp.C9136E671E933FD2.idx
app/src/main/java/com/example/hellonnapi/: MainActivity.kt
app/src/main/java/com/example/hellonnapi/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/hellonnapi/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
